@@ -85,6 +85,7 @@ bootRun {
             "-Dotel.metrics.exporter=none",
             "-Dotel.logs.exporter=none",
             "-Dotel.instrumentation.logging.mdcs.enabled=true",
-            "-Dotel.log.level=warn"
+            "-Dotel.log.level=warn",
+            "--enable-native-access=ALL-UNNAMED"
     ]
 }
